service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-nodejs
  namespace: auth-service-nodejs
  labels:
    app: auth-service-nodejs
spec:
  selector:
    app: auth-service-nodejs
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      name: http
  type: ClusterIP
